# open-library-api-parser

./: .gitignore  README.md  books_api_parser.py  pyproject.toml  requirements.txt
src/open_library_parser/: __main__.py  api.py  cli.py  database.py  export.py  transform.py
tests/: test_api.py  test_cli.py  test_database.py  test_export.py  test_transform.py
