[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "open-library-api-parser"
version = "0.1.0"
description = "CLI parser for the Open Library Search API"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31"
]

[project.scripts]
open-library-parser = "open_library_parser.cli:main"

[tool.setuptools.packages.find]
where = ["src"]